--- a/dasmoto_art_&_craft.html
+++ b/dasmoto_art_&_craft.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Dasmoto's Arts & Crafts</title>
-        <link rel="stylesheet" href="C:\Users\HP\Codecademy_Projects\Dasmoto's_Arts_&_Crafts\css\index.css" type="text/css" />
+        <link rel="stylesheet" href="https://github.com/Chynnie/Chynnie.github.io/blob/main/dasmoto_art_%26_craft.css" type="text/css" />
     </head>
     <body>
         <header>
